Added the capability to delete a job posting by it's clinic's id
